--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,17 +19,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: 1.23.6
-        cache-dependency-path: go.mod
-
-    # - name: Cache Go modules
-    #   uses: actions/cache@v4
-    #   with:
-    #     path: |
-    #       ~/.cache/go-build
-    #       ~/go/pkg/mod
-    #     key: ${{ runner.os }}-go-${{ hashFiles('go.mod') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-go-
+        cache-dependency-path: '**/go.sum'
 
     - name: Install dependencies
       run: go mod download
