--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: 1.23.6
-        cache-dependency-path: src/files/go.mod
+        cache-dependency-path: src/files/go.sum
 
     - name: Install dependencies
       run: go mod download
