--- a/.github/workflows/chktest.yml
+++ b/.github/workflows/chktest.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set Go module cache to read-only (for error replication)
+    - name: Make Go module cache read-only (simulate unlink error)
       run: |
         chmod -R a-w $HOME/go/pkg/mod || true
 
@@ -33,8 +33,7 @@ jobs:
       run: go build -v ./...
       working-directory: src/files
 
-    # Optional: Reset permissions after the job (cleanup)
-    - name: Reset Go module cache permissions
+    - name: Restore Go module cache permissions (cleanup)
       if: always()
       run: |
         chmod -R u+w $HOME/go/pkg/mod || true
